.metadata/.plugins/org.eclipse.cdt.ui/Lab4.build.log
20:31:45 **** Incremental Build of configuration Debug for project Lab4 ****
make all 
Building file: ../Sources/main.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I"C:/Users/Sienna/Documents/NewWorkSpace/Sienna-Rose-Price-Labs/Lab4/Static_Code/PDD" -I"C:/Users/Sienna/Documents/NewWorkSpace/Sienna-Rose-Price-Labs/Lab4/Static_Code/IO_Map" -I"C:/Users/Sienna/Documents/NewWorkSpace/Sienna-Rose-Price-Labs/Lab4/Sources" -I"C:/Users/Sienna/Documents/NewWorkSpace/Sienna-Rose-Price-Labs/Lab4/Generated_Code" -std=c99 -MMD -MP -MF"Sources/main.d" -MT"Sources/main.o" -c -o "Sources/main.o" "../Sources/main.c"
../Sources/main.c: In function 'main':
../Sources/main.c:54:13: warning: initialization makes integer from pointer without a cast [enabled by default]
  char str = "Not Computable";
             ^
../Sources/main.c: At top level:
../Sources/main.c:98:3: error: expected identifier or '(' before 'for'
   for(;;){}
   ^
../Sources/main.c:98:9: error: expected identifier or '(' before ')' token
   for(;;){}
         ^
Sources/subdir.mk:21: recipe for target 'Sources/main.o' failed
make: *** [Sources/main.o] Error 1

20:31:46 Build Finished (took 338ms)

